--- a/package.json
+++ b/package.json
@@ -1,6 +1,23 @@
 {
+  "name": "webpack-project",
+  "version": "1.0.0",
+  "description": "Проект на Webpack",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack serve --mode development --open",
+    "build": "webpack --mode production"
+  },
+  "keywords": [
+    "webpack",
+    "javascript"
+  ],
   "devDependencies": {
     "html-webpack-plugin": "^5.6.0",
-    "webpack": "^5.90.3"
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.0.0",
+    "babel-loader": "^8.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0"
   }
 }
